@@ -32,7 +32,10 @@ sql {
 	# and stop table in acct_table2
 	acct_table1 = "radacct"
 	acct_table2 = "radacct"
-		
+
+	# Allow for storing data after authentication
+	postauth_table = "radpostauth"
+
 	authcheck_table = "radcheck"
 	authreply_table = "radreply"
 	
@@ -179,4 +182,13 @@ sql {
 	#######################################################################
 
 	group_membership_query = "SELECT GroupName FROM ${usergroup_table} WHERE UserName='%{SQL-User-Name}'"
+
+	#######################################################################
+	# Authentication Logging Queries
+	#######################################################################
+	# postauth_query		- Insert some info after authentication
+	#######################################################################
+
+	postauth_query = "INSERT into ${postauth_table} (id, user, pass, reply, date) values ('', '%{User-Name}', '%{User-Password}', '%{reply:Packet-Type}', NOW())"
+
 }
