@@ -46,6 +46,8 @@ typedef struct sql_config {
 	int     num_sql_socks;
 	int     connect_failure_retry_delay;
 	int	query_on_not_found;
+	char   *sql_postauth_table;
+	char   *postauth_query;
 
 	/* individual driver config */
 	void	*localcfg;
