@@ -4,8 +4,10 @@ FreeRADIUS 1.0.0 ; Date: $Date$, urgency=low
 	* Fix segfault due to poorly initialised value in rlm_mschap
 	* Added support for rejected packets to run an Post-Auth-Type REJECT
 	  stanza instead of skipping post-auth entirely.
+	* Added support for %{*:Packet-Type} translation. (Not for %{check:})
 	* Added support for %{check:Attribute-Name} to go with
 	  %{request:Attribute-Name} and the like.
+	* Add support to rlm_sql for post-authentication query execution.
 
 FreeRADIUS 0.9.1 ; Date: 2003/09/04 14:56:34, urgency=low
 
